--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL = "mongodb+srv://evuliuks:evuliukss@cluster0.8ty5c.mongodb.net/e-shop"
 NEXTAUTH_SECRET = 'e-shop-jwt'
+
+GOOGLE_CLIENT_ID = 64318022289-oifp4fedk4eqvv8dabgp7kk1i3sir89h.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
