Integrate Stripe payments: implement checkout flow, order creation, webhook handling, and admin panel navigation.

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-DATABASE_URL = "mongodb+srv://evuliuks:evuliukss@cluster0.8ty5c.mongodb.net/e-shop"
-NEXTAUTH_SECRET = 'e-shop-jwt'
+DATABASE_URL = ""
+NEXTAUTH_SECRET = ""
 
-GOOGLE_CLIENT_ID = 64318022289-oifp4fedk4eqvv8dabgp7kk1i3sir89h.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_ID = ""
+GOOGLE_CLIENT_SECRET = ""
+STRIPE_SECRET_KEY = ""
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY = ""
+STRIPE_WEBHOOK_SECRET = ""
