--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.4.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
@@ -23,6 +25,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "eslint-config-next": "13.4.9",
+    "micro": "^10.0.1",
     "moment": "^2.30.1",
     "next": "13.4.9",
     "next-auth": "^4.24.11",
@@ -32,6 +35,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "stripe": "^12.18.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
