--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "eslint-config-next": "13.4.9",
+    "firebase": "^11.7.1",
     "micro": "^10.0.1",
     "moment": "^2.30.1",
     "next": "13.4.9",
@@ -32,6 +33,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
