--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^6.4.11",
+    "@mui/x-data-grid": "^8.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
     "@stripe/react-stripe-js": "^3.6.0",
