--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "13.4.9",
     "next-auth": "^4.24.11",
     "postcss": "8.4.25",
+    "query-string": "^9.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
