--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
@@ -25,16 +26,18 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.9",
     "eslint-config-next": "13.4.9",
     "firebase": "^11.7.1",
     "micro": "^10.0.1",
     "moment": "^2.30.1",
-    "next": "13.4.9",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "postcss": "8.4.25",
     "query-string": "^9.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
