--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.9",
-    "eslint-config-next": "13.4.9",
     "firebase": "^11.7.1",
     "micro": "^10.0.1",
     "moment": "^2.30.1",
@@ -48,10 +47,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.2",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "prettier": "^3.5.2",
     "prisma": "^6.5.0",
