--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
     "firebase": "^11.7.1",
     "micro": "^10.0.1",
